Add artists and add tests
