# server/api/models/artist.ts
@@ -1,13 +1,12 @@
 import { createSchema, Type, typedModel } from 'ts-mongoose';
 
-const ArtistSchema = createSchema(
+export const ArtistSchema = createSchema(
   {
-    title: Type.string({ required: true }),
-    year: Type.string({ required: true }),
-    rating: Type.string({ required: true }),
-    releaseDate: Type.date({ required: true }),
+    firstName: Type.string({ required: true }),
+    lastName: Type.string({ required: true }),
+    birthDate: Type.date({ required: true }),
   },
   { timestamps: { createdAt: true } }
 );
 
-export const Artist = typedModel('Album', ArtistSchema);
+export const ArtistModel = typedModel('Artist', ArtistSchema);
